<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_40ssp"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_90sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:endIconMode="clear_text"
        app:boxStrokeWidth="0dp"
        android:hint="@string/email"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/_12ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginEmailLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="0dp"
        android:hint="@string/password"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textSize="@dimen/_12ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login"
        android:textSize="@dimen/_15ssp"
        android:paddingHorizontal="@dimen/_78sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_32sdp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginLoginButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/register"
        android:textSize="@dimen/_15ssp"
        android:paddingHorizontal="@dimen/_64sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>