<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterPage">

    <ImageView
        android:id="@+id/registerBackButton"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/registerRegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mogra"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="@dimen/_32sdp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBackButton"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerRegisterText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:endIconMode="clear_text"
        app:boxStrokeWidth="0dp"
        android:hint="@string/name"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/_12ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerNameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:endIconMode="clear_text"
        app:boxStrokeWidth="0dp"
        android:hint="@string/email"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/_12ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerEmailLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="0dp"
        android:hint="@string/password"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/_12ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerConfirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="0dp"
        android:hint="@string/confirmpassword"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/_12ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerConfirmPasswordLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/register"
        android:textSize="@dimen/_15ssp"
        android:paddingHorizontal="@dimen/_78sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_32sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>