<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ReservePage">

    <ImageView
        android:id="@+id/reserveBackButton"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_10sdp"/>

    <SearchView
        android:id="@+id/reserveSearchBar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/reserveBackButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_18sdp"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="Doctor's Name"
        android:background="@drawable/searchview_background"
        android:submitBackground="@drawable/searchview_background"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/regionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reserveSearchBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        app:singleSelection="true"
        android:layout_gravity="center">

        <com.google.android.material.chip.Chip
            android:id="@+id/AllChip"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:chipStrokeColor="#979797"
            app:chipStrokeWidth="@dimen/_1sdp"
            app:chipBackgroundColor="@color/white"
            android:layout_marginEnd="@dimen/_5sdp"
            android:checkable="true"
            app:checkedIconTint="@color/black"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true"
            android:text="@string/all" />


        <com.google.android.material.chip.Chip
            android:id="@+id/northChip"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/_10sdp"
            app:chipStrokeColor="#979797"
            app:chipStrokeWidth="@dimen/_1sdp"
            app:chipBackgroundColor="@color/white"
            android:text="@string/north"
            app:checkedIconTint="@color/black"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true"
            android:checkable="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/southChip"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:chipStrokeColor="#979797"
            app:chipStrokeWidth="@dimen/_1sdp"
            app:chipBackgroundColor="@color/white"
            android:checkable="true"
            app:checkedIconTint="@color/black"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true"
            android:text="@string/south" />

        <com.google.android.material.chip.Chip
            android:id="@+id/eastChip"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/_5sdp"
            app:chipStrokeColor="#979797"
            app:chipStrokeWidth="@dimen/_1sdp"
            app:chipBackgroundColor="@color/white"
            android:checkable="true"
            app:checkedIconTint="@color/black"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true"
            android:text="@string/east" />

        <com.google.android.material.chip.Chip
            android:id="@+id/femaleChip"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:chipStrokeColor="#979797"
            app:chipStrokeWidth="@dimen/_1sdp"
            app:chipBackgroundColor="@color/white"
            android:checkable="true"
            app:checkedIconTint="@color/black"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true"
            android:text="West" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/regionGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardBackgroundColor="#FFA726"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHeight_percent="0.65">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reserveRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>